Fixed layout bug in workout block (date field overlap)

--- a/sport-war/src/main/webapp/static/pimp/sport_pimp.css
+++ b/sport-war/src/main/webapp/static/pimp/sport_pimp.css
@@ -1003,6 +1003,10 @@ input.submit:focus {
     display: block;
 }
 
+.editingWorkoutBlock input.text {
+    width: 10em;
+}
+
 /* ugly quick fix for the out-of-form comment problem */
 #hiddenComment {
     position: absolute;
